--- a/apps/consciously/wrangler.jsonc
+++ b/apps/consciously/wrangler.jsonc
@@ -2,7 +2,9 @@
 	"$schema": "./node_modules/wrangler/config-schema.json",
 	"name": "consciously",
 	"compatibility_date": "2025-12-28",
-	"compatibility_flags": ["nodejs_als"],
+	"compatibility_flags": [
+		"nodejs_compat"
+	],
 	"main": ".svelte-kit/cloudflare/_worker.js",
 	"assets": {
 		"binding": "ASSETS",
