chore: Remove Paraglide Vite plugin and Rollup external options, and add Cloudflare Pages build output directory.

--- a/apps/consciously/wrangler.jsonc
+++ b/apps/consciously/wrangler.jsonc
@@ -10,6 +10,7 @@
 		"binding": "ASSETS",
 		"directory": ".svelte-kit/cloudflare"
 	},
+	"pages_build_output_dir": ".svelte-kit/cloudflare",
 	"workers_dev": true,
 	"preview_urls": true
 }
